[gd_scene load_steps=4 format=3 uid="uid://cg1g8w1n1byoh"]

[ext_resource type="Script" uid="uid://cfurd1v466tn6" path="res://minigames/rock.gd" id="2_4j7oc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kn612"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_4j7oc"]
radius = 64.0

[node name="Firepit" type="Node2D"]

[node name="FireCenter" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = SubResource("PlaceholderTexture2D_kn612")

[node name="Rock" type="Node2D" parent="."]
position = Vector2(523, 330)
script = ExtResource("2_4j7oc")

[node name="Area2D" type="Area2D" parent="Rock"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock/Area2D"]
shape = SubResource("CircleShape2D_4j7oc")

[node name="Sprite2D" type="Sprite2D" parent="Rock"]

[connection signal="body_entered" from="Rock/Area2D" to="Rock" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Rock/Area2D" to="Rock" method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Rock/Area2D" to="Rock" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Rock/Area2D" to="Rock" method="_on_area_2d_mouse_exited"]
